# memory-system-rust

./: .gitignore  Cargo.toml  README.md
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
memory-core/: Cargo.toml
memory-core/src/: error.rs  lib.rs  types.rs  utils.rs
memory-core/src/embedding/: client.rs  mod.rs
memory-core/src/graph/: edges.rs  mod.rs  nodes.rs  traversal.rs
memory-core/src/retrieval/: mod.rs  rerank.rs  subgraph.rs  vector.rs
memory-core/src/storage/: lancedb.rs  mod.rs  schema.rs
memory-napi/: Cargo.toml  package.json
memory-napi/src/: lib.rs
memory-uniffi/: Cargo.toml
memory-uniffi/src/: lib.rs  uniffi_bindgen.rs
