[package]
name = "memory-cli"
version = "0.1.0"
edition = "2021"
authors = ["Meiju Team"]
description = "记忆系统CLI示例"

[[bin]]
name = "memory-cli"
path = "src/main.rs"

[dependencies]
memory-core = { path = "../../memory-core" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
chrono = "0.4"
colored = "2.0"
